Remove scala compile step from pom xml.