@@ -67,41 +67,6 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
-				<groupId>net.alchim31.maven</groupId>
-				<artifactId>scala-maven-plugin</artifactId>
-				<configuration>
-					<jvmArgs>
-						<jvmArg>-Xms1024m</jvmArg>
-						<jvmArg>-Xmx8G</jvmArg>
-						<jvmArg>-Duser.timezone=UTC</jvmArg>
-						<jvmArg>-XX:MaxPermSize=1024m</jvmArg>
-					</jvmArgs>
-					<args>
-						<arg>-nowarn</arg>
-						<arg>-unchecked</arg>
-						<arg>-deprecation</arg>
-					</args>
-					<scalaVersion>${scala.version}</scalaVersion>
-				</configuration>
-				<executions>
-					<execution>
-						<id>scala-compile-first</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>add-source</goal>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>scala-test-compile</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<configuration>
